# arm-demos

./: .gitignore  pixi.toml
.github/workflows/: docs.yml
docs/: conf.py
docs/source/: Camera Connection.rst  Development.rst  Installation.rst  Usage.rst  index.rst
src/arm_demo/: package.xml  setup.cfg  setup.py
src/arm_demo/arm_demo/: arm_demo.py
src/arm_demo/arm_demo/launch/: arm_demo.launch.py
src/colman_bringup/: package.xml  setup.cfg  setup.py
src/colman_description/: package.xml  setup.cfg  setup.py
src/colman_description/colman_description/config/: gripper_controllers.yaml  robotiq_controllers.yaml  ur_config.yaml
src/colman_description/colman_description/meshes/: vacuum-mount.mtl
src/colman_description/colman_description/urdf/: colman.urdf.xacro
src/colman_gazebo/: package.xml  setup.cfg  setup.py
src/colman_motion/: package.xml  setup.cfg  setup.py
src/colman_motion/colman_motion/: eye_in_hand.py  hand_eye_solve.py  pick_and_place.launch.py  pick_and_place.py
src/colman_moveit_config/: package.xml  setup.cfg  setup.py
src/colman_moveit_config/colman_moveit_config/: .setup_assistant
src/colman_perception/: package.xml  setup.cfg  setup.py
src/colman_perception/colman_perception/: camera_info_republisher.py  camera_publisher.py  detection.py
src/gripper_description/: package.xml  setup.cfg  setup.py
src/gripper_gazebo/: package.xml  setup.cfg  setup.py
src/oakd_description/: package.xml  setup.cfg  setup.py
src/oakd_gazebo/: package.xml  setup.cfg  setup.py
tools/: connect-oak-wsl.ps1  create-oak-env.sh
(+92 files in other folders)
