<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>colman_description</name>
  <version>0.0.0</version>
  <description>TODO: Package description</description>
  <maintainer email="dev@piercecoyle.com">pierce</maintainer>
  <license>TODO: License declaration</license>
  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>python3-pytest</test_depend>
  <!-- Runtime dependencies -->
  <exec_depend>xacro</exec_depend>
  <exec_depend>robot_state_publisher</exec_depend>
  <!-- External dependencies -->
  <exec_depend>ur_description</exec_depend>
  <exec_depend>robotiq_description</exec_depend>
  <exec_depend>oakd_description</exec_depend>
  <exec_depend>gripper_description</exec_depend>
  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
